@@ -1,0 +1,6 @@
+-- Create ej_data_field table
+CREATE TABLE ej_data_field (
+	id TINYINT UNSIGNED NOT NULL PRIMARY KEY AUTO_INCREMENT,
+	name VARCHAR(20) NOT NULL UNIQUE,
+	description TEXT NOT NULL UNIQUE
+);
