@@ -1,0 +1,9 @@
+-- Create ej_data_value table
+CREATE TABLE ej_data_value (
+	id INTEGER UNSIGNED NOT NULL PRIMARY KEY AUTO_INCREMENT,
+	year SMALLINT UNSIGNED NOT NULL,
+	value VARCHAR(20) NOT NULL,
+	ej_data_field_id TINYINT UNSIGNED NOT NULL,
+
+	FOREIGN KEY (ej_data_field_id) REFERENCES ej_data_field (id)
+);
